--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,9 @@
     height: 30%;
     width: auto;
     background-color: #A68D60;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
     
 }
 
@@ -25,6 +28,10 @@ body {
     flex-direction: column;
 }
 
+.content {
+    height: 50vh;
+    flex-grow: 1;
+}
 
 .footer {
     display: flex;
@@ -60,6 +67,5 @@ body {
 .nav-item {
     padding: 10px;
     margin: 5px;
-    font-family: 'Julius Sans One';
-    
+        
 }
