--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,8 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    
+    font-family: 'Julius Sans One';
+    font-weight: 600;
 }
 
 body {
