--- a/styles/signup-style.css
+++ b/styles/signup-style.css
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
 
 }
 
@@ -19,24 +19,27 @@
     display: flex;
     align-items: center;
     margin-right: 20px;
-    position: absolute;
+    /* position: absolute; */
 }
 
 .logo {
     height: 70px;
     width: auto;
-    padding-left: 20px;
-    margin-top: 20px;
-    position: relative;
+    /* padding-left: 20px;
+    margin-top: 20px; */
+    /* position: relative; */
+    
+  padding-top: 40px;
 }
 
 .shop-name {
 
     text-align: center;
     font-size: 30px;
-    position: relative;
-    padding-left: 130px;
+    /* position: relative; */
+    /* padding-left: 130px; */
     font-weight: 1000;
+    padding-top: 40px;
 }
 
 
@@ -46,9 +49,35 @@
     background-color: #A68D60;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
     font-weight: 600;
+    padding: 10px;
+    
 }
+.nav-item {
+    padding: 10px;
+    margin: 5px;
+}
+.nav-item::before {
+    content: "";
+    position: absolute;
+    bottom: 1px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #000;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.3s ease-in-out;
+  }
+  
+  .nav-item:hover::before {
+    transform: scaleX(1);
+  }
+  
+  .nav-item:hover {
+    transform: scale(1.2);
+  }
 
 .header-icons {
     display: flex;
@@ -77,6 +106,7 @@ body {
 .content {
     height: 50vh;
     flex-grow: 1;
+    
 }
 
 .footer {
@@ -144,32 +174,38 @@ body {
     height: 40%;
 }
 
-.nav-item {
-    padding: 10px;
-    margin: 5px;
-}
-.nav-item::before {
-    content: "";
-    position: absolute;
-    bottom: 1px;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background-color: #000;
-    transform: scaleX(0);
-    transform-origin: left;
-    transition: transform 0.3s ease-in-out;
+
+  @media (max-width: 768px) {
+    .nav-bar {
+      flex-direction: column;
+      height: auto;
+    }
+    
+    .nav-item {
+      width: 100%;
+      text-align: center;
+      border-bottom: 1px solid #fff;
+      
+    }
+    
+    .nav-item:last-child {
+      border-bottom: none;
+    }
+    .footer {
+        flex-direction: column;
+      }
+      
+      .slogan,
+      .socialmedia,
+      .newsletter {
+        flex: 1;
+        height: auto;
+      }
+      
+      .socialmedia-item {
+        margin: 5px;
+      }
   }
-  
-  .nav-item:hover::before {
-    transform: scaleX(1);
-  }
-  
-  .nav-item:hover {
-    transform: scale(1.2);
-  }
-  
-  
   
   
   
