--- a/styles/signup-style.css
+++ b/styles/signup-style.css
@@ -198,7 +198,22 @@
   flex-grow: 1;
   
 } */
-  
+.image-diamond {
+  height: 70px;
+  width: auto;
+  padding-top: 40px;
+}
+.shop-name1 {
+
+  text-align: center;
+  font-size: 30px;
+  /* position: relative; */
+  /* padding-left: 130px; */
+  font-weight: 1000;
+  padding-top: 40px;
+  padding-bottom: 10px;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -207,14 +222,50 @@ body {
   flex-direction: column;
   font-family: 'Julius Sans One';
 }
+.logo {
+  height: 70px;
+  width: auto;
+  /* padding-left: 20px;
+  margin-top: 20px; */
+  /* position: relative; */
+  
+padding-top: 40px;
+}
 
 
+.all-wrap {
+  margin: 20px;
+  width: 90%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  /* box-shadow: 0 20px 25px -5px rgba(0,0,0,0.1), 0 10px 10px -5px rgba(0,0,0,0.04); */
+
+}
+.image-wrap {
+  background-color: #f6f1e4;
+  box-shadow: 0 20px 25px -5px rgba(0,0,0,0.1), 0 10px 10px -5px rgba(0,0,0,0.04);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 500px;
+  margin-bottom: 20px;
+  /* border-radius: 5px; */
+  /* width: 50%; */
+ 
+}
+@media (max-width: 1200px) {
+  .image-wrap{
+    margin-bottom: 0px;
+  }
+}
 
 .signup-wrap {
   width: 500px;
   box-shadow: 0 20px 25px -5px rgba(0,0,0,0.1), 0 10px 10px -5px rgba(0,0,0,0.04);
   background-color: white;
-  border-radius: 5px;
+  /* border-radius: 5px; */
   margin-bottom: 20px;
 }
 
