--- a/styles/style.css
+++ b/styles/style.css
@@ -205,7 +205,7 @@ body {
 .content {
 
   flex-grow: 1;
-  background-color:#F2ECEB;
+  background-color:#F5EFED;
   }
 /* copy header and footer till this line only */
 
@@ -236,11 +236,35 @@ video::-webkit-media-controls-start-playback-button {
 .photo-collage1 {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
+  
+  align-items: center;
+  height: 80vh;
+  
   
 }
 .collage1{
+  
   height: 500px;
   width: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
  
+}
+.collage1 img {
+  margin-right: 2cm;
+}
+
+.collage1 img:last-child {
+  margin-right: 0;
+}
+.categories{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.img-cat{
+  height: 500px;
+  width: auto;
 }
