changed the edit profile form

--- a/styles/edit-profile.css
+++ b/styles/edit-profile.css
@@ -349,5 +349,8 @@ button:hover {
   background-color: #A68D60;
   transform: scale(0.98);
 }
-
-  
+/* 
+.save-button {
+  margin-left: 10px;
+}
+   */
