--- a/styles/signup-style.css
+++ b/styles/signup-style.css
@@ -334,7 +334,7 @@ input[type="checkbox"]:focus{
   border-color: none;
 }
 
-button {
+.input-wrap button {
   cursor: pointer;
   padding: 15px 60px;
   border-radius: 30px;
@@ -345,7 +345,7 @@ button {
   margin-right: 16px;
   transition: 500ms ease all;
 }
-button:hover {
+.input-wrap  button:hover {
   background-color: #A68D60;
   transform: scale(0.98);
 }
