fixed bugs in button

--- a/styles/signup-style.css
+++ b/styles/signup-style.css
@@ -1,203 +1,213 @@
 .header {
-    display: flex;
-    flex-direction: column;
-    background-color: #faf9f6;
-    height: 20vh;
+  display: flex;
+  flex-direction: column;
+  background-color: #F5EFED;
+  height: 20vh;
 }
 
 .title {
-    height: 70%;
-    width: auto;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
+  height: 70%;
+  width: auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 
 }
 
 .logo-div {
-    display: flex;
-    align-items: center;
-    margin-right: 20px;
-    /* position: absolute; */
+  display: flex;
+  align-items: center;
+  margin-right: 20px;
 }
 
 .logo {
-    height: 70px;
-    width: auto;
-    /* padding-left: 20px;
-    margin-top: 20px; */
-    /* position: relative; */
-    
+  height: 70px;
+  width: auto;
   padding-top: 40px;
 }
 
 .shop-name {
 
-    text-align: center;
-    font-size: 30px;
-    /* position: relative; */
-    /* padding-left: 130px; */
-    font-weight: 1000;
-    padding-top: 40px;
+  text-align: center;
+  font-size: 30px;
+  font-weight: 1000;
+  padding-top: 40px;
 }
 
 
 .nav-bar {
-    height: 30%;
-    width: auto;
-    background-color: #A68D60;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    font-weight: 600;
-    padding: 10px;
-    
-}
+  height: 30%;
+  width: auto;
+  background-color: #A68D60;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  font-weight: 600;
+  padding: 10px;
+ }
+
 .nav-item {
-    padding: 10px;
-    margin: 5px;
+  padding: 10px;
+  margin: 5px;
+  cursor: pointer;
 }
+
 .nav-item::before {
-    content: "";
-    position: absolute;
-    bottom: 1px;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background-color: #000;
-    transform: scaleX(0);
-    transform-origin: left;
-    transition: transform 0.3s ease-in-out;
-  }
-  
-  .nav-item:hover::before {
-    transform: scaleX(1);
-  }
-  
-  .nav-item:hover {
-    transform: scale(1.2);
-  }
+  content: "";
+  position: absolute;
+  bottom: 1px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #000;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.3s ease-in-out;
+}
+
+.nav-item:hover::before {
+  transform: scaleX(1);
+}
+
+.nav-item:hover {
+  transform: scale(1.2);
+}
 
 .header-icons {
-    display: flex;
-    justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .icons {
-    height: 20px;
-    width: auto;
-    padding: 10px;
-    transition: transform 0.2s ease-in-out;
+  height: 20px;
+  width: auto;
+  padding: 10px;
+  transition: transform 0.2s ease-in-out;
+  cursor: pointer;
 }
+
 .icons:hover {
-    transform: scale(1.2);
-  }
+  transform: scale(1.2);
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  font-family: 'Julius Sans One';
+}
+
 
 .footer {
-    display: flex;
-    height: 30vh;
-    flex-direction: row;
-    background-color: #383225;
-    flex-shrink: 0;
+  display: flex;
+  height: 30vh;
+  flex-direction: row;
+  background-color: #383225;
+  flex-shrink: 0;
 }
 
 .slogan {
-    flex: 1;
-    background-color: #F2E2C4;
-    padding: 20px;
-    height: 100%;
+  flex: 1;
+  background-color: #F2E2C4;
+  padding: 20px;
+  height: 100%;
 
 }
 
 .socialmedia {
-    flex: 1;
-    background-color: #F2E2C4;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-items: center;
-    padding: 20px;
+  flex: 1;
+  background-color: #F2E2C4;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  padding: 20px;
 
 }
 
 .socialmedia-item {
-    display: flex;
+  display: flex;
 
 }
 
 .socialmedia-name {
-    padding: 10px;
+  padding: 10px;
 }
 
 
 .newsletter {
-    flex: 1;
-    background-color: #F2E2C4;
-    height: 100%;
-    padding: 20px;
-    flex-direction: column;
+  flex: 1;
+  background-color: #F2E2C4;
+  height: 100%;
+  padding: 20px;
+  flex-direction: column;
 
 }
 
 .form {
-    padding-top: 20px;
+  padding-top: 20px;
 }
 
 .subscribe-button {
-    background-color: #F2E2C4;
-    border: 2px solid #A68D60;
-    transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out;
-    cursor: pointer;
+  background-color: #F2E2C4;
+  border: 2px solid #A68D60;
+  transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+  cursor: pointer;
 }
+
 .subscribe-button:hover {
-    background-color: #d1bb91;;
-    border-color: #141414;
-  }
+  background-color: #d1bb91;
+  ;
+  border-color: #141414;
+}
 
 .space {
-    height: 40%;
+  height: 40%;
 }
 
 
-  @media (max-width: 768px) {
-    .nav-bar {
-      flex-direction: column;
-      height: auto;
-    }
-    
-    .nav-item {
-      width: 100%;
-      text-align: center;
-      border-bottom: 1px solid #fff;
-      
-    }
-    
-    .nav-item:last-child {
-      border-bottom: none;
-    }
-    .footer {
-        flex-direction: column;
-      }
-      
-      .slogan,
-      .socialmedia,
-      .newsletter {
-        flex: 1;
-        height: auto;
-      }
-      
-      .socialmedia-item {
-        margin: 5px;
-      }
+@media (max-width: 768px) {
+  .nav-bar {
+    flex-direction: column;
+    height: auto;
   }
-  
-  /* 
+
+  .nav-item {
+    width: 100%;
+    text-align: center;
+    border-bottom: 1px solid #fff;
+
+  }
+
+  .nav-item:last-child {
+    border-bottom: none;
+  }
+
+  .footer {
+    flex-direction: column;
+  }
+
+  .slogan,
+  .socialmedia,
+  .newsletter {
+    flex: 1;
+    height: auto;
+  }
+
+  .socialmedia-item {
+    margin: 5px;
+  }
+}
 .content {
-  height: 50vh;
+
   flex-grow: 1;
+  background-color:#F5EFED;
+  }
+/* copy header and footer till this line only */
   
-} */
 .image-diamond {
   height: 70px;
   width: auto;
