--- a/styles/login-menu.css
+++ b/styles/login-menu.css
@@ -208,12 +208,7 @@ body {
   }
 
  
-  /* 
-.content {
-  height: 50vh;
-  flex-grow: 1;
-  
-} */
+ 
 .image-diamond {
   height: 70px;
   width: auto;
@@ -253,7 +248,9 @@ padding-top: 40px;
   margin: 20px;
   width: 90%;
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
+  /* flex-wrap: wrap; */
+  align-items: center;
   justify-content: center;
   /* box-shadow: 0 20px 25px -5px rgba(0,0,0,0.1), 0 10px 10px -5px rgba(0,0,0,0.04); */
 
@@ -266,7 +263,7 @@ padding-top: 40px;
   justify-content: center;
   align-items: center;
   width: 500px;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
   /* border-radius: 5px; */
   /* width: 50%; */
  
