--- a/styles/style.css
+++ b/styles/style.css
@@ -288,3 +288,13 @@ video::-webkit-media-controls-start-playback-button {
   font-size: 50px;
   padding-bottom: 20px;
 }
+#quote {
+  text-align: center;
+  font-weight: 800;
+  font-size: 50px;
+  padding: 20px;
+  white-space: nowrap;
+  overflow: hidden;
+  border-right: 0.15em solid #F5EFED;;
+}
+
