--- a/styles/style.css
+++ b/styles/style.css
@@ -292,9 +292,73 @@ video::-webkit-media-controls-start-playback-button {
   text-align: center;
   font-weight: 800;
   font-size: 50px;
-  padding: 20px;
+  padding: 100px;
   white-space: nowrap;
   overflow: hidden;
   border-right: 0.15em solid #F5EFED;;
+}
+
+.photo-and-desc{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+}
+
+.card {
+  width: 300px;
+  height: 500px;
+  position: relative;
+  perspective: 1000px;
+  margin-bottom: 50px;
+}
+
+.front, .back {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.front {
+  transform: rotateY(0deg);
+  transition: transform 0.5s ease-in-out;
+}
+
+.back {
+  transform: rotateY(180deg);
+  transition: transform 0.5s ease-in-out;
+}
+
+.card:hover .front {
+  transform: rotateY(-180deg);
+}
+
+.card:hover .back {
+  transform: rotateY(0deg);
+}
+
+.collage2{
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+  border-radius: 5px;
+}
+
+.card .back {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #F5EFED;
+  color: black;
+  font-weight: bold;
+  font-size: 18px;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
