added letter spacing to categories

--- a/styles/bracelets.css
+++ b/styles/bracelets.css
@@ -212,6 +212,8 @@ body {
   } */
   .bracelets_title{
     text-align: center;
+    letter-spacing: 5px;
+    font-size: 50px;
   }
   .container{
     display: flex;
