--- a/search.css
+++ b/search.css
@@ -200,33 +200,27 @@
     .socialmedia-item {
       margin: 5px;
     }
+    .card {
+      width: 100%;
+      height: auto;
+      max-width: 300px;
+    }
+      .card .back {
+      font-size: 5px;
+      padding: 10px;
+    }
     
+    .product_description_list {
+      font-size: 5px;
+      padding-top: 0;
+    }
+    .feedback-box {
+      width: 100%;
+      margin: 20px 0;
+    }
   }
   .content {
   
     flex-grow: 1;
     background-color:#F5EFED;
-    }
-
-    h1 {
-        font-size: 2.5rem;
-        color: #333;
-        text-align: center;
-        margin-top: 2rem;
-    }
-
-    p {
-        font-size: 1.2rem;
-        line-height: 1.5;
-        margin-bottom: 1rem;
-        text-align: left;
-        padding: 10px;
-    }
-
-    .container {
-        max-width: 800px;
-        margin: 0 auto;
-        padding: 2rem;
-        background-color: #f5f5f5;
-        border-radius: 5px;
     }
