--- a/styles/admin-view-users.css
+++ b/styles/admin-view-users.css
@@ -16,6 +16,7 @@ header {
 .container{
     display: flex;
     flex-direction: column;
+    
 }
 
 .nav-bar {
@@ -33,4 +34,39 @@ header {
     padding: 10px;
     margin: 5px;
   }
+  table {
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  th, td {
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+  }
+  
+  th {
+    background-color: #f2f2f2;
+    color: #333;
+    font-weight: bold;
+  }
+  
+  tr:hover {
+    background-color: #f5f5f5;
+  }
+  
+  #my-button {
+    margin-top: 16px;
+    padding: 8px 16px;
+    background-color: #A68D60;
+    color: #0d0d0d;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+  }
+  
+  #my-button:hover {
+    background-color: #f2d193;
+  }
+  
   
