--- a/styles/admin-view-users.css
+++ b/styles/admin-view-users.css
@@ -1,72 +1,108 @@
 body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  background-color: #f2f2f2;
 }
+
 header {
-    background-color: #333;
-    color: white;
-    padding: 10px;
-    text-align: center;
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 20px;
+  background-color: #333;
+  color: white;
+  padding: 10px;
+  text-align: center;
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
 }
-.container{
-    display: flex;
-    flex-direction: column;
-    
+
+.container {
+  display: flex;
+  flex-direction: column;
+
 }
 
 .nav-bar {
-    height: 30%;
-    width: auto;
-    background-color: #A68D60;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    font-weight: 600;
-    padding: 10px;
-   }
-  
-  .nav-item {
-    padding: 10px;
-    margin: 5px;
-  }
-  table {
-    border-collapse: collapse;
-    width: 100%;
-  }
-  
-  th, td {
-    padding: 8px;
-    text-align: left;
-    border-bottom: 1px solid #ddd;
-  }
-  
-  th {
-    background-color: #f2f2f2;
-    color: #333;
-    font-weight: bold;
-  }
-  
-  tr:hover {
-    background-color: #f5f5f5;
-  }
-  
-  #my-button {
-    margin-top: 16px;
-    padding: 8px 16px;
-    background-color: #A68D60;
-    color: #0d0d0d;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-  }
-  
-  #my-button:hover {
-    background-color: #f2d193;
-  }
-  
-  
+  height: 30%;
+  width: auto;
+  background-color: #A68D60;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  font-weight: 600;
+  padding: 10px;
+}
+
+.nav-item {
+  padding: 10px;
+  margin: 5px;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th,
+td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+th {
+  background-color: #f2f2f2;
+  color: #333;
+  font-weight: bold;
+}
+
+tr:hover {
+  background-color: #f5f5f5;
+}
+
+#my-button {
+  margin-top: 16px;
+  padding: 8px 16px;
+  background-color: #A68D60;
+  color: #0d0d0d;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+}
+
+#my-button:hover {
+  background-color: #f2d193;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+label {
+  display: inline-block;
+  width: 100px;
+  font-weight: bold;
+  margin-right: 10px;
+}
+
+input[type="text"],
+input[type="number"],
+textarea {
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+}
+
+input[type="submit"] {
+  background-color: #A68D60;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+input[type="submit"]:hover {
+    background-color: #eed7ab;
+}
