--- a/styles/admin-view-users.css
+++ b/styles/admin-view-users.css
@@ -73,6 +73,15 @@ tr:hover {
   background-color: #f2d193;
 }
 
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 50vh;
+}
+
+
 .form-group {
   margin-bottom: 20px;
 }
