--- a/styles/admin-view-users.css
+++ b/styles/admin-view-users.css
@@ -58,19 +58,33 @@ th {
 tr:hover {
   background-color: #f5f5f5;
 }
+.submit-btn{
+  background-color: #A68D60;
+  color: #f6f2f2;
+  border: none;
+  font-size: 20px;
+}
+.submit-btn:hover {
+  /* background-color: #e7a938; */
+  border: 5px solid #000000;
+}
 
 #my-button {
   margin-top: 16px;
   padding: 8px 16px;
   background-color: #A68D60;
-  color: #0d0d0d;
+  color: #f6f2f2;
+  font-weight: 500;
+  font-size: large;
   border: none;
   cursor: pointer;
   width: 100%;
 }
 
+
 #my-button:hover {
-  background-color: #f2d193;
+  /* background-color: #e7a938; */
+  border: 5px solid #000000;
 }
 
 form {
